# file-divisor

./: .gitignore  BUILD.cmd  CMAKELISTS.txt  CMakeLists.txt  DOXYGEN  README.md  build.bat  build.cmd  build.sh
source/: config.h.in  main.cpp  main_gui.cpp
source/cli_executable/: main.cpp
source/gui_executable/: main.cpp
tests/: main.cpp
